performed further idea brainstorming

--- a/Provided Data EDA.ipynb
+++ b/Provided Data EDA.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -142,7 +142,7 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "4  tt0452644,tt0452692,tt3458030,tt2178256  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "4      NaN  imdbDisplay          NaN                0.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "4        2017             80.0  Comedy,Drama,Fantasy  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -585,20 +585,96 @@
        "      <td>NaN</td>\n",
        "      <td>[\"Beth Boothby\"]</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028181</th>\n",
+       "      <td>tt9692684</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nm0186469</td>\n",
+       "      <td>actor</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[\"Ebenezer Scrooge\"]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028182</th>\n",
+       "      <td>tt9692684</td>\n",
+       "      <td>2</td>\n",
+       "      <td>nm4929530</td>\n",
+       "      <td>self</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[\"Herself\",\"Regan\"]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028183</th>\n",
+       "      <td>tt9692684</td>\n",
+       "      <td>3</td>\n",
+       "      <td>nm10441594</td>\n",
+       "      <td>director</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028184</th>\n",
+       "      <td>tt9692684</td>\n",
+       "      <td>4</td>\n",
+       "      <td>nm6009913</td>\n",
+       "      <td>writer</td>\n",
+       "      <td>writer</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1028185</th>\n",
+       "      <td>tt9692684</td>\n",
+       "      <td>5</td>\n",
+       "      <td>nm10441595</td>\n",
+       "      <td>producer</td>\n",
+       "      <td>producer</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1028186 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      tconst  ordering     nconst  category       job        characters\n",
-       "0  tt0111414         1  nm0246005     actor       NaN       [\"The Man\"]\n",
-       "1  tt0111414         2  nm0398271  director       NaN               NaN\n",
-       "2  tt0111414         3  nm3739909  producer  producer               NaN\n",
-       "3  tt0323808        10  nm0059247    editor       NaN               NaN\n",
-       "4  tt0323808         1  nm3579312   actress       NaN  [\"Beth Boothby\"]"
+       "            tconst  ordering      nconst  category       job  \\\n",
+       "0        tt0111414         1   nm0246005     actor       NaN   \n",
+       "1        tt0111414         2   nm0398271  director       NaN   \n",
+       "2        tt0111414         3   nm3739909  producer  producer   \n",
+       "3        tt0323808        10   nm0059247    editor       NaN   \n",
+       "4        tt0323808         1   nm3579312   actress       NaN   \n",
+       "...            ...       ...         ...       ...       ...   \n",
+       "1028181  tt9692684         1   nm0186469     actor       NaN   \n",
+       "1028182  tt9692684         2   nm4929530      self       NaN   \n",
+       "1028183  tt9692684         3  nm10441594  director       NaN   \n",
+       "1028184  tt9692684         4   nm6009913    writer    writer   \n",
+       "1028185  tt9692684         5  nm10441595  producer  producer   \n",
+       "\n",
+       "                   characters  \n",
+       "0                 [\"The Man\"]  \n",
+       "1                         NaN  \n",
+       "2                         NaN  \n",
+       "3                         NaN  \n",
+       "4            [\"Beth Boothby\"]  \n",
+       "...                       ...  \n",
+       "1028181  [\"Ebenezer Scrooge\"]  \n",
+       "1028182   [\"Herself\",\"Regan\"]  \n",
+       "1028183                   NaN  \n",
+       "1028184                   NaN  \n",
+       "1028185                   NaN  \n",
+       "\n",
+       "[1028186 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +682,7 @@
    "source": [
     "data = pd.read_csv('./unzippedData/imdb.title.principals.csv')\n",
     "imdb_title_principles = pd.DataFrame(data)\n",
-    "imdb_title_principles.head()"
+    "imdb_title_principles"
    ]
   },
   {
