--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,6 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE HTML PUBLIC \"-//IETF//DTD HTML 2.0//EN\">\n",
+      "<html><head>\n",
+      "<title>403 Forbidden</title>\n",
+      "</head><body>\n",
+      "<h1>Forbidden</h1>\n",
+      "<p>You don't have permission to access this resource.</p>\n",
+      "<p>Additionally, a 403 Forbidden\n",
+      "error was encountered while trying to use an ErrorDocument to handle the request.</p>\n",
+      "</body></html>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://movies-tvshows-data-imdb.p.rapidapi.com/\"\n",
+    "\n",
+    "querystring = {\"type\":\"get-popular-movies\",\"page\":\"1\",\"year\":\"2020\"}\n",
+    "\n",
+    "headers = {\n",
+    "    'x-rapidapi-host': \"movies-tvshows-data-imdb.p.rapidapi.com\",\n",
+    "    'x-rapidapi-key': \"fae2b3dc60msh3d3991c8f65638dp10deafjsnb1920fbb0349\"\n",
+    "    }\n",
+    "\n",
+    "response = requests.request(\"GET\", url, headers=headers, params=querystring)\n",
+    "\n",
+    "\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -17,6 +57,7 @@
       "<p>You don't have permission to access this resource.</p>\n",
       "<p>Additionally, a 403 Forbidden\n",
       "error was encountered while trying to use an ErrorDocument to handle the request.</p>\n",
+      "<script defer src=\"https://static.cloudflareinsights.com/beacon.min.js\" data-cf-beacon='{\"rayId\":\"5c45094e5fc0156f\",\"version\":\"2020.7.0\",\"si\":10}'></script>\n",
       "</body></html>\n",
       "\n"
      ]
